--- a/1home.html
+++ b/1home.html
@@ -59,13 +59,13 @@
         <div class="row row1">
           <div class="box1 col-lg-6 col-md-6 col-8 gx-1 mt-3 mb-2">
             <div class="inrow2" id="welcomeUser">
-                <h2>Welcome Username</h2>
+                <h2 id="welcomeUserId">Welcome Username</h2>
                 <h6 class="mt-3">Your Total Balance is</h6>
-                <h3>₹0/-</h3>
+                <h3 id="balanceId">₹0/-</h3>
               <div class="rw3 col-12 mt-3">
                 <!-- <h6 id="tincome">Income <i class="fa-solid fa-arrow-up-right-dots text-success" ></i> <br> ₹3,000</h6> -->
-                <h6 id="tincome"><i class="fa-regular fa-circle-up text-success"></i> Total Income <br> ₹0/-</h6>
-                <h6 id="texpense"><i class="fa-regular fa-circle-down text-danger"></i> Total Expense<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;₹0/-</h6>
+                <h6 id="tincomeId"><i class="fa-regular fa-circle-up text-success"></i> Total Income <br> ₹0/-</h6>
+                <h6 id="texpenseId"><i class="fa-regular fa-circle-down text-danger"></i> Total Expense<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;₹0/-</h6>
               </div>
 
             </div>
